# nemassler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  app.js  app.ts  ensureDirectoryExists.js  env.d.ts  fileUtils.js  fileUtils.ts  forge.config.js  forge.config.ts  index.html  main.js  main.ts  ncm2mp3.js  ncm2mp3.ts  package-lock.json  package.json  pnpm-lock.yaml  readFiles.js  readFiles.ts  tsconfig.json  uno.config.ts  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
buildIcon/: icon.icns
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.scss  App.styl  App.svelte  main.ts
frontend/src/hooks/: useCurrentPlatform.ts  useElectronHref.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/lib/: Footer.svelte  Header.svelte  Main.svelte
frontend/src/pages/: MainPage.svelte  Meizi.svelte
frontend/src/routes/: index.ts
frontend/src/store/: languageStore.ts
frontend/src/utils/: axios.ts  detect.ts  initDirectories.ts  judgePath.ts
public/: detect.js  index.css  index.html
src/: App.vue  main.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_file.rs  error.rs  lib.rs  main.rs  ncm2mp3.rs  traits.rs
src-tauri/src/crypt/: decode.rs  mod.rs  rc4.rs
src-tauri/src/meta_data/: lofty_metadata.rs  mod.rs
src-tauri/src/ncm/: audio.rs  decoder.rs  dumper.rs  layout.md  mod.rs  model.rs  music.rs
src/components/: Header.vue  Main.vue
src/i18n/: index.ts
src/i18n/en/: en.json
src/i18n/zh-hans/: zh-hans.json
src/pages/: bpmDetect.vue  index.vue  options.vue
src/utils/: index.ts
