[package]
name = "nemassler"
version = "2.0.0"
description = "Transform Netease Music .ncm audio into .mp3 audio, and support .mp3 BPM calculation, built in Rust."
authors = ["Vincent-the-gamer <https://github.com/Vincent-the-gamer>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
whoami = "1.5.2"
base64 = "0.21.7"
aes = "0.8.4"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
thiserror = "1.0.65"
rayon = "1.10.0"
anyhow = "1.0.43"
tauri-plugin-shell = "2"

[dependencies.lofty]
version = "0.21.0"
optional = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = ["lofty"]
lofty = ["dep:lofty"]
