[package]
name = "nemassler"
version = "2.0.1"
description = "Transform Netease Music .ncm audio into .mp3 audio, and support .mp3 BPM calculation, built in Rust."
authors = ["Vincent-the-gamer <https://github.com/Vincent-the-gamer>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.133"
whoami = "^1.5.2"
tauri-plugin-shell = "^2"
ncmdump = "0.8.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
